[package]
name = "cocmd"
version = "1.0.67"
edition = "2021"
authors = ["Moshe Roth <mzsrtgzr2@gmail.com>"]
license = "GPL-3.0"
homepage = "https://cocmd.org"
description = "cmdops tool for dev teams"


[dependencies]
clap = { version = "4", features = ["cargo", "derive"], optional = true }
console = "^0.15.0"
exitcode = "^1.1.2"
dialoguer = "0.11.0"
clap-markdown = "0.1.3"
levenshtein = { version = "1.0.5", optional = true }
dirs = "5.0.1"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.9.0"
tracing = "^0.1.37"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }
anyhow = "1.0.38"
thiserror = "1.0.23"
tempdir = "0.3.7"
glob = "0.3.0"
natord = "1.0.9"
lazy_static = "1.4.0"
regex = "1.5.5"
zip = "0.6.6"
scopeguard = "1.1.0"
fs_extra = "1.2.0"
sha2 = "0.10.8"
hex = "0.4.3"
reqwest = { version = "0.11.20", features = ["blocking", "json"]}
execute = "0.2.12"

ratatui = "0.23.0"
openssl = { version = "0.10", features = ["vendored"] }
termimad = "0.24.0"
crossterm = "0.27.0"
pty = "0.2.2"

[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]
howto = ["levenshtein"]

[[bin]]
name = "cocmd"
path = "src/main.rs"

required-features = ["cli"]
