[package]
name = "cocmd-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cocmd-package = { path = "../cocmd-package" }
cocmd-log = { path = "../cocmd-log" }
cocmd-md = { path = "../cocmd-md" }
dirs = "5.0.1"
lazy_static = "1.4.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.9.0"