[package]
name = "cocmd-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cocmd-log = { path = "../cocmd-log"}
cocmd-core = { path = "../cocmd-core"}
cocmd-md = { path = "../cocmd-md"}
termimad = "0.25.2"
inline_colorization = "0.1.5"
minijinja = "1.0.8"
execute = "0.2.12"
dialoguer = "0.10.4"
anyhow = "1"

