[package]
name = "cocmd"
version = "1.0.4"
edition = "2021"
authors = ["Moshe Roth <mzsrtgzr2@gmail.com>"]
license = "GPL-3.0"
homepage = "https:/cocmd.org"



[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/cocmd-x86_64-windows.zip"
bin-dir = "cocmd-x86_64-windows/cocmd.exe"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/cocmd-x86_64-macos.tar.xz"
bin-dir = "cocmd-x86_64-macos/cocmd"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/cocmd-aarch64-macos.tar.xz"
bin-dir = "cocmd-x86_64-macos/cocmd"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/cocmd-x86_64-linux.tar.xz"
bin-dir = "cocmd-x86_64-linux/cocmd"
pkg-fmt = "txz"

# </cargo binstall>

[dependencies]
cocmd-package = { path = "../cocmd-package"}
cocmd-path = { path = "../cocmd-path"}
clap = { version = "4", features = ["cargo", "derive"], optional = true }
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "^0.9.0"
anyhow = "1"
console = "^0.15.0"
exitcode = "^1.1.2"
tracing = "^0.1.34"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
dialoguer = "0.10.4"
execute = "0.2.12"
termimad = "0.25.2"
clap-markdown = "0.1.3"
levenshtein = { version = "1.0.5", optional = true }


[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]
howto = ["levenshtein"]

[[bin]]
name = "cocmd"
path = "src/main.rs"

required-features = ["cli"]
