[package]
name = "cocmd"
version = "1.0.9"
edition = "2021"
authors = ["Moshe Roth <mzsrtgzr2@gmail.com>"]
license = "GPL-3.0"
homepage = "https://cocmd.org"




[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/cocmd-x86_64-macos.tar.xz"
bin-dir = "cocmd-x86_64-macos/cocmd"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/cocmd-aarch64-macos.tar.xz"
bin-dir = "cocmd-x86_64-macos/cocmd"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/cocmd-x86_64-linux.tar.xz"
bin-dir = "cocmd-x86_64-linux/cocmd"
pkg-fmt = "txz"

# </cargo binstall>

[dependencies]
cocmd-package = { path = "../cocmd-package"}
cocmd-core = { path = "../cocmd-core"}
cocmd-runner = { path = "../cocmd-runner"}
cocmd-log = { path = "../cocmd-log"}
cocmd-md = { path= "../cocmd-md" }
clap = { version = "4", features = ["cargo", "derive"], optional = true }
anyhow = "1"
console = "^0.15.0"
exitcode = "^1.1.2"
dialoguer = "0.10.4"
clap-markdown = "0.1.3"
levenshtein = { version = "1.0.5", optional = true }

[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]
howto = ["levenshtein"]

[[bin]]
name = "cocmd"
path = "src/main.rs"

required-features = ["cli"]
