[tool.poetry]
name = "cocmd"
version = "0.1.1"
description = ""
authors = ["Moshe Roth <mzsrtgzr2@gmail.com>"]
readme = "README.md"
packages = [{include = "cocmd_cli"}]

[tool.poetry.scripts]
cocmd = "cocmd_cli:app"

[tool.poetry.dependencies]
python = "^3.8"
inquirer = "^3.1.3"
dacite = "^1.8.1"
pyyaml = "^6.0.1"
click = "^8.1.7"
rich = "^13.5.2"



[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true